# backend/config/api.py
@@ -10,6 +10,7 @@ from ninja.responses import Status
 from ninja.security import django_auth
 
 from apps.accounts.api import router as accounts_router
+from apps.dashboard.api import router as dashboard_router
 from apps.reference.api import router as reference_router
 from apps.review.api import router as review_router
 from apps.runs.api import router as runs_router
@@ -21,6 +22,7 @@ api.add_router("", accounts_router)
 api.add_router("", reference_router)
 api.add_router("", runs_router)
 api.add_router("", review_router)
+api.add_router("", dashboard_router)
 
 
 class HealthOut(Schema):
